--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -1,46 +1,54 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-.navbar{
+
+.navbar {
     background-color: #6f42c1;
 }
-.navbar ul li a{
+
+.navbar ul li a {
     padding: 2px 10px;
     cursor: pointer;
     color: white;
     list-style: none;
     display: inline-block;
 }
-.navbar .btn{
+
+.navbar .btn {
     color: orange;
 }
+
 .sidebar {
-    height: 100vh   ;
+    height: 100vh;
     width: 250px;
-    background:rgb(15 23 42);
+    background: rgb(15 23 42);
     padding: 20px;
 
     border-right: 2px solid #ddd;
 }
 
-.text-white{
+.text-white {
     --tw-text-opacity: 1;
-        color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
+
 input[placeholder="Dashboard"]::placeholder {
     color: white;
     padding: 2px;
     font-style: italic;
 }
- .card-body {
-  border: 1px solid  grey;
-  border-radius: 12px;
-  padding: 12px;
-  color: white;
-box-shadow: 0px 0px 10px #6f42c1;    /* border-radius: 50%; */
+
+.card-body {
+    border: 1px solid grey;
+    border-radius: 12px;
+    padding: 12px;
+    color: white;
+    box-shadow: 0px 0px 10px #6f42c1;
+    /* border-radius: 50%; */
 }
+
 .layout-wrapper {
     display: flex;
     height: calc(100vh - 60px);
@@ -62,6 +70,7 @@ box-shadow: 0px 0px 10px #6f42c1;    /* border-radius: 50%; */
     background: #f5f5f7;
     overflow-y: auto;
 }
+
 .sidebar ul li {
     margin-top: 1gi0px;
     /* space between each li */
@@ -71,6 +80,7 @@ box-shadow: 0px 0px 10px #6f42c1;    /* border-radius: 50%; */
 ul li:last-child {
     margin-right: 0;
 }
+
 .circle {
     width: 40px;
     height: 40px;
@@ -86,6 +96,7 @@ ul li:last-child {
     font-size: 20px;
     margin-left: 10px;
 }
+
 /* Hide all menus by default on small screens */
 /* MOBILE MENU */
 @media (max-width: 768px) {
@@ -116,10 +127,12 @@ ul li:last-child {
         cursor: pointer;
     }
 }
+
 .content {
     flex: 1;
     padding: 20px;
 }
+
 @media (max-width: 756px) {
 
     header nav {
@@ -142,7 +155,7 @@ ul li:last-child {
         margin-bottom: 10px;
     }
 
-    
+
     /* Menu becomes vertical & centered */
     header nav ul {
         flex-direction: column;
